<resources>
    <string name="snackbar_unable_to_download">Unable to download the images</string>
    <string name="retry">Retry</string>
    <string name="app_name">Healthmap</string>
    <string name="username_email">Username/Email</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="rating">Rating:</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">name</string>
    <string name="description_hint">Write a description...</string>
    <string name="tags_hint">Write tags separated by comma</string>
    <string name="add_address">Add Address</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="add_item">Add Item</string>
    <string name="add_to_price_table">Add to price table</string>
    <string name="log_out">Log Out</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZHN0b2lsb3YxOTkiLCJhIjoiY2xkeXk3dmI0MHY0eTQybnY1NHQ3eTF1NSJ9.GIc6_M10J8pq8ya1DZNKYw</string>
    <string name="pick_address">Pick Address</string>
    <string-array name="user_types">
        <item>User</item>
        <item>Gym Owner</item>
    </string-array>
    <string name="style_json">
        [
  {
    \"featureType\": \"administrative\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"poi\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"road\",
    \"elementType\": \"labels.icon\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"transit\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  }
]
    </string>
    <string name="use_the_app_as_ordinary_user">Use the app as ordinary user</string>
    <string name="confirm_password">Confirm Password</string>
</resources>